# backend/internal/dto/charts.go
@@ -1,0 +1,9 @@
+package dto
+
+type Chart struct {
+	Data []int64 `json:"data"`
+}
+
+type GetChartsResponse struct {
+	Data []int64 `json:"data"`
+}
